Grid row spacing issue fix.

--- a/Sourcecode/UI/StriveUI/src/assets/css/style.css
+++ b/Sourcecode/UI/StriveUI/src/assets/css/style.css
@@ -1740,8 +1740,3 @@ table th {
 .text-capital {
     text-transform: capitalize;
 }
-
-.ng-star-inserted td
-{
-    padding: .15rem !important;
-}
